Handle relative paths in cmdline arguments better

File-roller didn't take into account that the
working directory might have changed between
opening the first instance and opening additional
archives on the command line with relative paths.

When a relative path was used for an archive
on the command line, it would always be relative
to the first instance working directory - not to
the launched instance working directory.

This is fixed by using the recently added
g_application_command_line_create_file_for_arg ()
(in gio since 2.36).

Problem reported by John Stumpo <stump@stump.io>
in http://bugs.debian.org/718672

https://bugzilla.gnome.org/show_bug.cgi?id=705746